[gd_scene load_steps=39 format=2]

[ext_resource path="res://imagens/spritesheet_player/tecnico/andandoE2.png" type="Texture" id=1]
[ext_resource path="res://imagens/spritesheet_player/tecnico/andandoE1 tecnico.png" type="Texture" id=2]
[ext_resource path="res://imagens/spritesheet_player/tecnico/andandotrasD tecnico.png" type="Texture" id=3]
[ext_resource path="res://imagens/spritesheet_player/tecnico/paradoE.png" type="Texture" id=4]
[ext_resource path="res://scripts/jogador/Jogador.gd" type="Script" id=5]
[ext_resource path="res://imagens/spritesheet_player/tecnico/costas tecnico.png" type="Texture" id=6]
[ext_resource path="res://Arrow.tscn" type="PackedScene" id=7]
[ext_resource path="res://imagens/joy_stick/pixil-frame-0 (4).png" type="Texture" id=8]
[ext_resource path="res://imagens/spritesheet_player/tecnico/andandotrasE tecnico.png" type="Texture" id=9]
[ext_resource path="res://imagens/spritesheet_player/tecnico/andandoD tecnico.png" type="Texture" id=10]
[ext_resource path="res://imagens/spritesheet_player/tecnico/andandoE tecnico.png" type="Texture" id=11]
[ext_resource path="res://imagens/spritesheet_player/tecnico/frente tecnico.png" type="Texture" id=12]
[ext_resource path="res://imagens/spritesheet_player/admin/Admin/andandoDadmin.png" type="Texture" id=13]
[ext_resource path="res://imagens/spritesheet_player/admin/Admin/andandoLE admin.png" type="Texture" id=14]
[ext_resource path="res://imagens/spritesheet_player/admin/Admin/paradocostas1 admin.png" type="Texture" id=15]
[ext_resource path="res://imagens/spritesheet_player/admin/Admin/andandoL admin.png" type="Texture" id=16]
[ext_resource path="res://imagens/spritesheet_player/admin/Admin/andandotrasDadmin.png" type="Texture" id=17]
[ext_resource path="res://imagens/spritesheet_player/admin/Admin/andandoEadmin.png" type="Texture" id=18]
[ext_resource path="res://imagens/spritesheet_player/admin/Admin/paradoadmin1.png" type="Texture" id=19]
[ext_resource path="res://imagens/spritesheet_player/admin/Admin/paradocostas2 admin.png" type="Texture" id=20]
[ext_resource path="res://imagens/spritesheet_player/admin/Admin/andandotrasEadmin.png" type="Texture" id=21]
[ext_resource path="res://imagens/spritesheet_player/admin/Admin/paradoadmin2.png" type="Texture" id=22]
[ext_resource path="res://imagens/spritesheet_player/admin/Admin/andandoLD admin.png" type="Texture" id=23]
[ext_resource path="res://imagens/spritesheet_player/executivo/Executivo/AndandoD.png" type="Texture" id=24]
[ext_resource path="res://imagens/spritesheet_player/executivo/Executivo/andandoE.png" type="Texture" id=25]
[ext_resource path="res://imagens/spritesheet_player/executivo/Executivo/AndandoL1.png" type="Texture" id=26]
[ext_resource path="res://imagens/spritesheet_player/executivo/Executivo/ParadoL.png" type="Texture" id=27]
[ext_resource path="res://imagens/spritesheet_player/executivo/Executivo/ParadoCostas1.png" type="Texture" id=28]
[ext_resource path="res://imagens/spritesheet_player/executivo/Executivo/AndandoL2.png" type="Texture" id=29]
[ext_resource path="res://imagens/spritesheet_player/executivo/Executivo/Parado1.png" type="Texture" id=30]
[ext_resource path="res://imagens/spritesheet_player/executivo/Executivo/Parado2.png" type="Texture" id=31]
[ext_resource path="res://imagens/spritesheet_player/executivo/Executivo/AndandoTrásE.png" type="Texture" id=32]
[ext_resource path="res://imagens/spritesheet_player/executivo/Executivo/AndandroTrásD.png" type="Texture" id=33]
[ext_resource path="res://imagens/spritesheet_player/executivo/Executivo/ParadoCostas2.png" type="Texture" id=34]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), SubResource( 4 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "baixo",
"speed": 6.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "cima",
"speed": 6.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "direita",
"speed": 6.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "parado",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "paradoc",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "paradod",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 13 ), ExtResource( 19 ), ExtResource( 18 ) ],
"loop": true,
"name": "baixo",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 21 ), ExtResource( 15 ), ExtResource( 17 ) ],
"loop": true,
"name": "cima",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 23 ) ],
"loop": true,
"name": "direita",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 22 ) ],
"loop": true,
"name": "parado",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 20 ) ],
"loop": true,
"name": "parado_costas",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 30 ), ExtResource( 24 ), ExtResource( 30 ), ExtResource( 25 ) ],
"loop": true,
"name": "baixo",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 33 ), ExtResource( 28 ), ExtResource( 32 ) ],
"loop": true,
"name": "cima",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 29 ) ],
"loop": true,
"name": "direita",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "parado",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 34 ) ],
"loop": true,
"name": "parado_costas",
"speed": 5.0
} ]

[node name="Personagem" type="KinematicBody2D"]
position = Vector2( 489, 304 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 5 )

[node name="Animacao_defensor" type="AnimatedSprite" parent="."]
position = Vector2( 3, 6 )
scale = Vector2( 2.2, 2.2 )
frames = SubResource( 1 )
animation = "parado"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
pause_mode = 1
position = Vector2( 1, 4 )
scale = Vector2( 0.525178, 0.469394 )
polygon = PoolVector2Array( -22.8494, -6.39122, -26.6576, -29.8257, -22.8494, -40.4777, -17.137, -46.8689, -7.61646, -51.1298, 7.61646, -51.1298, 17.137, -46.8689, 22.8494, -40.4777, 26.6576, -29.8257, 22.8494, -6.39122, 17.137, -4.26081, 28.5617, 12.7824, 28.5617, 23.4345, 26.6576, 25.5649, 19.0412, 27.6953, 19.0412, 40.4777, 15.2329, 40.4777, 15.2329, 46.8689, 3.80823, 46.8689, 3.80823, 40.4777, -3.80823, 40.4777, -3.80823, 46.8689, -17.137, 46.8689, -17.137, 42.6081, -20.9453, 40.4777, -20.9453, 27.6953, -28.5617, 23.4345, -28.5617, 14.9128, -17.137, -4.26081 )

[node name="mouse_pad" type="CanvasLayer" parent="."]

[node name="Animacao_general" type="AnimatedSprite" parent="."]
position = Vector2( 3, 5 )
scale = Vector2( 2.2, 2.2 )
frames = SubResource( 2 )
animation = "cima"

[node name="Animacao_rei" type="AnimatedSprite" parent="."]
position = Vector2( 3, 5 )
scale = Vector2( 2.2, 2.2 )
frames = SubResource( 3 )
animation = "cima"

[node name="Arrow" parent="." instance=ExtResource( 7 )]
position = Vector2( 1, 55 )
scale = Vector2( 0.0737231, 0.0737231 )
flip_h = true

[node name="gamepad" type="CanvasLayer" parent="."]

[node name="up" type="TouchScreenButton" parent="gamepad"]
position = Vector2( 68, 426 )
scale = Vector2( 1.345, 1.29325 )
normal = ExtResource( 8 )

[node name="down" type="TouchScreenButton" parent="gamepad"]
position = Vector2( 151, 588 )
rotation = 3.14159
scale = Vector2( 1.345, 1.293 )
normal = ExtResource( 8 )

[node name="right" type="TouchScreenButton" parent="gamepad"]
position = Vector2( 197, 462 )
rotation = 1.5708
scale = Vector2( 1.345, 1.293 )
normal = ExtResource( 8 )

[node name="left" type="TouchScreenButton" parent="gamepad"]
position = Vector2( 23, 548 )
rotation = -1.5708
scale = Vector2( 1.345, 1.293 )
normal = ExtResource( 8 )

[connection signal="pressed" from="gamepad/up" to="." method="_on_up_pressed"]
[connection signal="released" from="gamepad/up" to="." method="_on_up_released"]
[connection signal="pressed" from="gamepad/down" to="." method="_on_down_pressed"]
[connection signal="released" from="gamepad/down" to="." method="_on_down_released"]
[connection signal="pressed" from="gamepad/right" to="." method="_on_right_pressed"]
[connection signal="released" from="gamepad/right" to="." method="_on_right_released"]
[connection signal="pressed" from="gamepad/left" to="." method="_on_left_pressed"]
[connection signal="released" from="gamepad/left" to="." method="_on_left_released"]
